#227 Greetings: fixed overflow and added ids

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -292,8 +292,6 @@
 			margin: 0;
 			width: 100%;
 			min-width: 300px;
-			max-width: 16em;
-			white-space: nowrap;
 			text-overflow: ellipsis;
 		}
 
